--- a/package.json
+++ b/package.json
@@ -20,36 +20,40 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.5",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.5",
+    "@nestjs/common": "^10.4.6",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.6",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.5",
+    "@nestjs/platform-express": "^10.4.6",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "midtrans-client": "1.3.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prisma": "^5.21.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xendit-node": "^6.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
-    "@nestjs/schematics": "^10.2.2",
-    "@nestjs/testing": "^10.4.5",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.6",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.6",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.8.7",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.10.0",
-    "@typescript-eslint/parser": "^8.10.0",
-    "eslint": "^9.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
